--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ playground.xcworkspace
 # Carthage/Checkouts
 
 Carthage/Build/
-RoutineRider/ChatGPT/Keys
+RoutineRider/ChatGPT/Keys.swift
 
 # fastlane
 #
